@startuml
package data {

	abstract class "DataSetView (DSV)" as dsv
    class "StyleAsset" as sta

    package tabular {
        class "TableView" as tv
        class "PostgresTable" as pt
        class "PostgresDB" as pdb
        class "TableField" as tf
        class "ViewField" as vf
        class "DbSchema" as ds

        tv "1-n" --* "1" pt

        pt "*" --* "1" ds
        pt "1" *-- "0..*" tf

        tv "1" *-- "1..n" vf
        vf "1..n" --* "1" tf

        ds "1..*" -- "1" pdb
    }

    package "raster"{
        class "RasterView" as rv
        class "RasterDS" as rds

        rv "1-n" --* "1" rds
    }

    dsv <|-- tv
    dsv <|-- rv

    dsv "1" -left- "*" sta
}
@enduml